Fixed Refresh button alignment and warnings on new template mapping

--- a/assets/css/gathercontent-importer.css
+++ b/assets/css/gathercontent-importer.css
@@ -49,6 +49,7 @@
   margin-bottom: .5em; }
 
 .wp-core-ui p .gc-refresh-connection {
+	line-height: 1.3;
   vertical-align: bottom; }
 
 .description.gc-radio-desc {
